# DnDPlaya

./: .env.example  .gitignore  CLAUDE.md  Hidden Grove of the Deep Druids 20220504.map.txt  README.md  dndplaya.ini  pyproject.toml  runbook.py
src/dndplaya/: __init__.py  __main__.py  cli.py  config.py
src/dndplaya/agents/: base.py  context.py  critic.py  dm.py  dm_tools.py  player.py  player_tools.py  provider.py  summarizer.py
src/dndplaya/feedback/: collector.py  narrative.py  reviews.py
src/dndplaya/mechanics/: __init__.py  characters.py  checks.py  combat.py  dice.py  monsters.py  state.py
src/dndplaya/orchestrator/: phase.py  session.py  transcript.py  turn_manager.py
src/dndplaya/pdf/: chunker.py  extractor.py  models.py  pages.py
src/dndplaya/prompts/: __init__.py  archetype_explorer.txt  archetype_free_spirit.txt  archetype_roleplayer.txt  archetype_tactician.txt  critic_system_prefix.txt  critic_system_suffix.txt  critic_user.txt  dm_runnability_perspective.txt  dm_system.txt  group_input_nudge.txt  narrative_system_prefix.txt  narrative_system_suffix.txt  narrative_user.txt  player_followup.txt  player_system.txt  (+3 more)
tests/: conftest.py  test_agent_base.py  test_characters.py  test_checks.py  test_chunker_edge_cases.py  test_combat.py  test_combat_edge_cases.py  test_config.py  test_context.py  test_dice.py  test_dice_expression.py  test_dm_tools.py  test_monsters.py  test_pages.py  test_pdf_chunker.py  test_pdf_models.py  test_phase.py  test_player_tools.py  test_provider_ollama.py  test_session_loop.py  test_state.py  test_summarizer.py
(+5 files in other folders)
