[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dndplaya"
version = "0.1.0"
description = "AI-powered D&D dungeon playtesting tool"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pymupdf4llm>=0.0.10",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
dndplaya = "dndplaya.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
